<resources>
    <string name="app_name">Etiquetas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">ESCANEAR ETIQUETAS V1.3.5</string>
    <string name="saveCSV">Guardar CSV</string>
    <string name="cancelar">Cancelar</string>
    <string name="deleteLast">Eliminar Último Escaneado</string>
    <string name="scan">Escanear</string>
    <string name="clvProducto">Clave </string>
    <string name="piezas">Piezas</string>
    <string name="kilos">Kilos</string>
    <string name="lote">Lote</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="login">Iniciar Sesion</string>
    <string name="bienvenida">Bienvenido a la App de Escaneo de Etiquetas</string>
    <string name="por_favor_ingrese_su_nombre">Por favor, ingrese su nombre</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="logo_de_patsa">Logo de Patsa</string>
    <string name="generateReport">Generar Corte de Producción </string>
    <string name="create_report">Generar Reporte</string>
    <string name="gen_report_day">Generar Reporte Del Día</string>
    <string name="select_camara">Seleccione la Cámara</string>
    <string name="select_turno">Seleccione El Turno</string>
    <string name="select_mov">Seleccione el Movimiento</string>
    <string name="gen_specific_report">Generar Reporte Específico</string>
    <string name="gen_general_report">Genere un reporte con todos los movimientos registrados hasta el momento.</string>
    <string name="o">O</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="ver_etiquetas_escaneadas">Ver Etiquetas Escaneadas</string>
    <string name="ver_cat_logo_de_productos">Ver Catálogo de Productos</string>
    <string name="catalogo_de_productos">Catalogo de Productos</string>
    <string name="all_scan_etiquetas">Etiquetas Escaneadas</string>
    <string name="see_historico">Ver Todas las Transacciones</string>
    <string name="camaras">Cámaras</string>
    <string name="movimientos">Movimientos</string>

</resources>